Add new api elements to certification and openapi spec
