# reporting-app/app/models/api/certifications/response.rb
@@ -3,10 +3,13 @@
 class Api::Certifications::Response < ValueObject
   attribute :id, :string
   attribute :member_id, :string
+  attribute :eis_client_id, :string
+  attribute :application_date, :date
   attribute :case_number, :string
 
   attribute :certification_requirements, Certifications::Requirements.to_type
   attribute :member_data, Certifications::MemberData.to_type
+  attribute :household_data, Certifications::HouseholdData.to_type
 
   attribute :outcome
 
