# reporting-app/openapi.generated.yml
@@ -19,6 +19,17 @@ components:
           - string
           - 'null'
           description: An identifier for the case associated with the certification
+        eis_client_id:
+          type:
+          - string
+          - 'null'
+          description: An additional identifier for the person receiving benefits
+        application_date:
+          type:
+          - string
+          - 'null'
+          format: date
+          description: The date of the application
         certification_requirements:
           oneOf:
           - "$ref": "#/components/schemas/CertificationRequirements"
@@ -27,6 +38,10 @@ components:
         member_data:
           oneOf:
           - "$ref": "#/components/schemas/CertificationMemberData"
+          - type: 'null'
+        household_data:
+          oneOf:
+          - "$ref": "#/components/schemas/CertificationHouseholdData"
           - type: 'null'
       required:
       - member_id
@@ -109,7 +124,7 @@ components:
               pregnancy_status: false
     CertificationRequirements:
       type: object
-      description: Description of certification needs
+      description: Descriptmion of certification needs
       properties:
         certification_date:
           type: string
@@ -119,25 +134,43 @@ components:
           type:
           - string
           - 'null'
+          enum:
+          - new_application
+          - recertification
+          - change_in_circumstances
+          -
           description: The type of certification
         months_that_can_be_certified:
-          type: array
+          type:
+          - array
+          - 'null'
           items:
             type: string
             format: date
           description: The list of months the Member can choose from
         number_of_months_to_certify:
-          type: integer
+          type:
+          - integer
+          - 'null'
           description: The number of months the Member needs to certify
         due_date:
-          type: string
+          type:
+          - string
+          - 'null'
           format: date
           description: Date by which the Member must have submitted their evidence
+        seasonal_worker:
+          type:
+          - boolean
+          - 'null'
+          description: Whether the member is a seasonal worker
+        self_employed:
+          type:
+          - boolean
+          - 'null'
+          description: Whether the member is self employed
       required:
       - certification_date
-      - months_that_can_be_certified
-      - number_of_months_to_certify
-      - due_date
     CertificationRequirementParameters:
       type: object
       properties:
@@ -168,6 +201,10 @@ components:
           description: The date of the certification
         certification_type:
           type: string
+          enum:
+          - new_application
+          - recertification
+          - cahnge_in_circumstances
           description: The type of certification
       required:
       - certification_date
@@ -220,6 +257,24 @@ components:
               type:
               - string
               - 'null'
+        address:
+          type:
+          - object
+          - 'null'
+          description: The address of the member
+          properties:
+            street_line_1:
+              type: string
+            street_line_2:
+              type:
+              - string
+              - 'null'
+            city:
+              type: string
+            state:
+              type: string
+            zip_code:
+              type: string
         payroll_accounts:
           type:
           - array
@@ -233,6 +288,13 @@ components:
           items:
             "$ref": "#/components/schemas/CertificationMemberDataActivity"
           description: Community engagement activities performed by the member
+        exemptions:
+          type:
+          - array
+          - 'null'
+          items:
+            "$ref": "#/components/schemas/CertificationMemberDataExemption"
+          description: Exemption data for the member
         date_of_birth:
           type:
           - string
@@ -305,11 +367,17 @@ components:
           - employment
           - community_service
           - education
+          - unearned
           description: The category of activity
-        hours:
-          type: string
-          format: decimal
-          description: Number of hours for the activity
+        oneOf:
+        - hours:
+            type: string
+            format: decimal
+            description: Number of hours for the activity
+        - credit_hours:
+            type: string
+            format: decimal
+            description: Number of credit hours for the educational activity
         period_start:
           type: string
           format: date
@@ -405,6 +473,101 @@ components:
       oneOf:
       - "$ref": "#/components/schemas/CertificationMemberDataHourlyActivity"
       - "$ref": "#/components/schemas/CertificationMemberDataIncomeActivity"
+    CertificationMemberDataExemption:
+      type:
+        type: string
+        enum:
+        - american_indian_or_alaska_native
+        - caregiver_child
+        - former_foster_care
+        - pregnancy
+        - postpartum
+        - incarceration
+        - caregiver_disability
+        - meeting_atap_work
+        - meeting_tanf_or_snap_work
+        - veteran_disability
+        - medical_condition
+        - substance_treatment
+        - travel_for_medical
+        description: Exemption data type
+      value:
+        type: boolean
+        description: Whether the exemption applies to the member
+      periods:
+        type:
+        - array
+        - 'null'
+        items:
+          "$ref": "#/components/schemas/CertificationMemberDataExemptionPeriod"
+      verification_status:
+        type: string
+        enum:
+        - verified
+        - unverified
+        - pending
+        description: The verification status of the exemption
+      required:
+      - value
+      - verification_status
+    CertificationMemberDataExemptionPeriod:
+      period_start:
+        type:
+        - string
+        - 'null'
+        format: date
+        description: Start date of the exemption period
+      period_end:
+        type:
+        - string
+        - 'null'
+        format: date
+        description: End date of the exemption period
+    CertificationHouseholdData:
+      members:
+        type:
+        - array
+        - 'null'
+        items:
+          "$ref": "#/components/schemas/CertificationHoldDataMember"
+    CertificationHouseholdDataMember:
+      name:
+        type:
+        - object
+        - 'null'
+        description: The name of the household member
+        properties:
+          first:
+            type:
+            - string
+            - 'null'
+          middle:
+            type:
+            - string
+            - 'null'
+          last:
+            type:
+            - string
+            - 'null'
+          suffix:
+            type:
+            - string
+            - 'null'
+      ssn:
+        type:
+        - string
+        - 'null'
+        description: The Social Security Number of the household member
+      date_of_birth:
+        type:
+        - string
+        - 'null'
+        format: date
+        description: The date of birth of the household member
+      monthly_income_dollars_total:
+        type: string
+        format: decimal
+        description: Monthly total income of the household member
     CertificationOutcome:
       type: object
       properties:
@@ -547,67 +710,67 @@ components:
       required:
       - status
   responses:
-    1a3926b4a1eac9f005dec387800e1507:
+    c3921ac724c67388c66f654b2b4f43dc:
       description: A Certification
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/CertificationResponseBody"
-    ff7826f6b562116bcef8b599d09d3ab6:
+    2cdd76bcec8dba88eb1097381bb59681:
       description: Accepted
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/d41d8cd98f00b204e9800998ecf8427e"
-    e2fe8a5e572bcdaee5008a82baf34287:
+    dd591988da6bc99d07a6f165348e62ce:
       description: Not found.
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/ErrorResponseBody"
-    3590752e38fa9f2296481ed95953f902:
+    2b20bd0eb34e10dbf2c08bda0fc44c18:
       description: Created Certification.
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/CertificationResponseBody"
-    2dd28ad4b862e7db67cdd78f10fb4bf4:
+    ef7eb4b1f5f87698cc6832767ec7cda2:
       description: Accepted
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/d41d8cd98f00b204e9800998ecf8427e"
-    a0aac079b0a3cb2797c97d5d39f47510:
+    9e3aa70df550226bbd6ef3c40bd1b7fa:
       description: User error.
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/ErrorResponseBody"
-    f09df365f2a9e80ee13d0a4453e09ebb:
+    c9e75a02b95e240d3c0ca37d0621d0ca:
       description: User error.
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/ErrorResponseBody"
-    b76b8971431ab794ef8d2e01e0510af0:
+    6b31d6ee874ea1de16abd7f097aec98f:
       description: A Certification
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/CertificationResponseBody"
-    c794093a5619c4bbcfd05793f8623d76:
+    ecfc675a36fc3b7c29e97b7367e2f8bd:
       description: Not found.
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/ErrorResponseBody"
-    ec923fea4f5d76eb959c89b83421cc40:
+    43e728b16b29efd6b73e9cc4fecfca7a:
       description: Response
       content:
         application/json:
           schema:
             "$ref": "#/components/schemas/ece4f2c15f241af4536e1132d15a279a"
-    7bdfa78cec931efdddc0123df04e8e9f:
+    9cb1972ff6348024bc954a797b89b9d6:
       description: Response
       content:
         application/json:
@@ -639,7 +802,7 @@ components:
         type: string
       style: simple
   requestBodies:
-    7f3156a21997e813b1e387dd53fb32f4:
+    ea499c838a5431cb6faa2b7d60b3e458:
       description: The Certification data.
       content:
         application/json:
@@ -732,11 +895,11 @@ paths:
       - "$ref": "#/components/parameters/49e46dd8af57e26752938ebb0d0ec979"
       responses:
         '200':
-          "$ref": "#/components/responses/1a3926b4a1eac9f005dec387800e1507"
+          "$ref": "#/components/responses/c3921ac724c67388c66f654b2b4f43dc"
         '202':
-          "$ref": "#/components/responses/ff7826f6b562116bcef8b599d09d3ab6"
+          "$ref": "#/components/responses/2cdd76bcec8dba88eb1097381bb59681"
         '404':
-          "$ref": "#/components/responses/e2fe8a5e572bcdaee5008a82baf34287"
+          "$ref": "#/components/responses/dd591988da6bc99d07a6f165348e62ce"
       security:
       - hmac: []
       deprecated: false
@@ -750,16 +913,16 @@ paths:
       parameters:
       - "$ref": "#/components/parameters/4f7cce241e43c9b4680b65e2612ab599"
       requestBody:
-        "$ref": "#/components/requestBodies/7f3156a21997e813b1e387dd53fb32f4"
+        "$ref": "#/components/requestBodies/ea499c838a5431cb6faa2b7d60b3e458"
       responses:
         '201':
-          "$ref": "#/components/responses/3590752e38fa9f2296481ed95953f902"
+          "$ref": "#/components/responses/2b20bd0eb34e10dbf2c08bda0fc44c18"
         '202':
-          "$ref": "#/components/responses/2dd28ad4b862e7db67cdd78f10fb4bf4"
+          "$ref": "#/components/responses/ef7eb4b1f5f87698cc6832767ec7cda2"
         '400':
-          "$ref": "#/components/responses/a0aac079b0a3cb2797c97d5d39f47510"
+          "$ref": "#/components/responses/9e3aa70df550226bbd6ef3c40bd1b7fa"
         '422':
-          "$ref": "#/components/responses/f09df365f2a9e80ee13d0a4453e09ebb"
+          "$ref": "#/components/responses/c9e75a02b95e240d3c0ca37d0621d0ca"
       security:
       - hmac: []
       deprecated: false
@@ -774,9 +937,9 @@ paths:
       - "$ref": "#/components/parameters/49e46dd8af57e26752938ebb0d0ec979"
       responses:
         '200':
-          "$ref": "#/components/responses/b76b8971431ab794ef8d2e01e0510af0"
+          "$ref": "#/components/responses/6b31d6ee874ea1de16abd7f097aec98f"
         '404':
-          "$ref": "#/components/responses/c794093a5619c4bbcfd05793f8623d76"
+          "$ref": "#/components/responses/ecfc675a36fc3b7c29e97b7367e2f8bd"
       security:
       - hmac: []
       deprecated: false
@@ -811,9 +974,9 @@ paths:
       operationId: GET_api_health
       responses:
         '200':
-          "$ref": "#/components/responses/ec923fea4f5d76eb959c89b83421cc40"
+          "$ref": "#/components/responses/43e728b16b29efd6b73e9cc4fecfca7a"
         '503':
-          "$ref": "#/components/responses/7bdfa78cec931efdddc0123df04e8e9f"
+          "$ref": "#/components/responses/9cb1972ff6348024bc954a797b89b9d6"
       security:
       - hmac: []
       deprecated: false
